Many fixes + tests + bruno
