# src/app.ts
@@ -7,7 +7,7 @@ const app = express();
 app.use(express.json());
 app.use(express.urlencoded({ extended: true }));
 
-app.use('/', battleRoutes);
+app.use('/api/v1/player', battleRoutes);
 
 app.use(errorHandler);
 
