# src/models/player.ts
@@ -2,6 +2,6 @@ export interface Player {
   id?: number,
   level: number,
   brainrotId: number,
-  inventory: number[],
+  inventory: Record<number, number>,
   gold: number
 }
